--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "license": "MIT",
   "dependencies": {
     "lucide-react": "^0.536.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "node": "^24.9.0",
+    "npm": "^11.6.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-router-dom": "^6.20.1",
     "sass": "^1.69.5"
   },
