--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "gsap": "^3.13.0",
     "lucide-react": "^0.536.0",
     "node": "^24.9.0",
     "npm": "^11.6.1",
